--- a/NBA_predictions.ipynb
+++ b/NBA_predictions.ipynb
@@ -2,6 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting selenium\n",
+      "  Downloading selenium-4.10.0-py3-none-any.whl (6.7 MB)\n",
+      "     ---------------------------------------- 0.0/6.7 MB ? eta -:--:--\n",
+      "     -- ------------------------------------- 0.4/6.7 MB 8.5 MB/s eta 0:00:01\n",
+      "     ---------- ----------------------------- 1.8/6.7 MB 19.5 MB/s eta 0:00:01\n",
+      "     ---------------------- ----------------- 3.7/6.7 MB 26.3 MB/s eta 0:00:01\n",
+      "     ------------------------------ --------- 5.2/6.7 MB 27.6 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  6.7/6.7 MB 32.8 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 6.7/6.7 MB 28.5 MB/s eta 0:00:00\n",
+      "Collecting trio-websocket~=0.9\n",
+      "  Downloading trio_websocket-0.10.3-py3-none-any.whl (17 kB)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from selenium) (2023.5.7)\n",
+      "Requirement already satisfied: urllib3[socks]<3,>=1.26 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from selenium) (1.26.15)\n",
+      "Collecting trio~=0.17\n",
+      "  Downloading trio-0.22.0-py3-none-any.whl (384 kB)\n",
+      "     ---------------------------------------- 0.0/384.9 kB ? eta -:--:--\n",
+      "     ------------------------------------- 384.9/384.9 kB 23.4 MB/s eta 0:00:00\n",
+      "Collecting outcome\n",
+      "  Downloading outcome-1.2.0-py2.py3-none-any.whl (9.7 kB)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from trio~=0.17->selenium) (22.1.0)\n",
+      "Collecting async-generator>=1.9\n",
+      "  Downloading async_generator-1.10-py3-none-any.whl (18 kB)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from trio~=0.17->selenium) (1.2.0)\n",
+      "Collecting exceptiongroup>=1.0.0rc9\n",
+      "  Downloading exceptiongroup-1.1.1-py3-none-any.whl (14 kB)\n",
+      "Requirement already satisfied: idna in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from trio~=0.17->selenium) (3.4)\n",
+      "Collecting sortedcontainers\n",
+      "  Downloading sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from trio~=0.17->selenium) (1.15.1)\n",
+      "Collecting wsproto>=0.14\n",
+      "  Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
+      "Collecting h11<1,>=0.9.0\n",
+      "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+      "     ---------------------------------------- 0.0/58.3 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 58.3/58.3 kB ? eta 0:00:00\n",
+      "Installing collected packages: sortedcontainers, outcome, h11, exceptiongroup, async-generator, wsproto, trio, trio-websocket, selenium\n",
+      "Successfully installed async-generator-1.10 exceptiongroup-1.1.1 h11-0.14.0 outcome-1.2.0 selenium-4.10.0 sortedcontainers-2.4.0 trio-0.22.0 trio-websocket-0.10.3 wsproto-1.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import selenium "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +74,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "myenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
