imported libraries and packages

--- a/NBA_predictions.ipynb
+++ b/NBA_predictions.ipynb
@@ -57,12 +57,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing necessary packages and libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import selenium "
+    "import selenium \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
