fixed selenium code

--- a/NBA_predictions.ipynb
+++ b/NBA_predictions.ipynb
@@ -1,62 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting selenium\n",
-      "  Downloading selenium-4.10.0-py3-none-any.whl (6.7 MB)\n",
-      "     ---------------------------------------- 0.0/6.7 MB ? eta -:--:--\n",
-      "     -- ------------------------------------- 0.4/6.7 MB 8.5 MB/s eta 0:00:01\n",
-      "     ---------- ----------------------------- 1.8/6.7 MB 19.5 MB/s eta 0:00:01\n",
-      "     ---------------------- ----------------- 3.7/6.7 MB 26.3 MB/s eta 0:00:01\n",
-      "     ------------------------------ --------- 5.2/6.7 MB 27.6 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  6.7/6.7 MB 32.8 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 6.7/6.7 MB 28.5 MB/s eta 0:00:00\n",
-      "Collecting trio-websocket~=0.9\n",
-      "  Downloading trio_websocket-0.10.3-py3-none-any.whl (17 kB)\n",
-      "Requirement already satisfied: certifi>=2021.10.8 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from selenium) (2023.5.7)\n",
-      "Requirement already satisfied: urllib3[socks]<3,>=1.26 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from selenium) (1.26.15)\n",
-      "Collecting trio~=0.17\n",
-      "  Downloading trio-0.22.0-py3-none-any.whl (384 kB)\n",
-      "     ---------------------------------------- 0.0/384.9 kB ? eta -:--:--\n",
-      "     ------------------------------------- 384.9/384.9 kB 23.4 MB/s eta 0:00:00\n",
-      "Collecting outcome\n",
-      "  Downloading outcome-1.2.0-py2.py3-none-any.whl (9.7 kB)\n",
-      "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from trio~=0.17->selenium) (22.1.0)\n",
-      "Collecting async-generator>=1.9\n",
-      "  Downloading async_generator-1.10-py3-none-any.whl (18 kB)\n",
-      "Requirement already satisfied: sniffio in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from trio~=0.17->selenium) (1.2.0)\n",
-      "Collecting exceptiongroup>=1.0.0rc9\n",
-      "  Downloading exceptiongroup-1.1.1-py3-none-any.whl (14 kB)\n",
-      "Requirement already satisfied: idna in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from trio~=0.17->selenium) (3.4)\n",
-      "Collecting sortedcontainers\n",
-      "  Downloading sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
-      "Requirement already satisfied: cffi>=1.14 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from trio~=0.17->selenium) (1.15.1)\n",
-      "Collecting wsproto>=0.14\n",
-      "  Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
-      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\nguye\\anaconda3\\envs\\myenv\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
-      "Collecting h11<1,>=0.9.0\n",
-      "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-      "     ---------------------------------------- 0.0/58.3 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 58.3/58.3 kB ? eta 0:00:00\n",
-      "Installing collected packages: sortedcontainers, outcome, h11, exceptiongroup, async-generator, wsproto, trio, trio-websocket, selenium\n",
-      "Successfully installed async-generator-1.10 exceptiongroup-1.1.1 h11-0.14.0 outcome-1.2.0 selenium-4.10.0 sortedcontainers-2.4.0 trio-0.22.0 trio-websocket-0.10.3 wsproto-1.2.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install selenium"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -66,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,25 +18,44 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "driver = webdriver.Chrome()\n",
-    "driver.get(\"https://www.youtube.com\")"
+    "driver.get(f\"https://www.amazon.com/s?k={year}&crid=ZUR7H9TK7QFM&sprefix={year}%2Caps%2C83&ref=nb_sb_noss_1\")\n",
+    "\n",
+    "driver.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "years = list(range(2021,2023))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in years:\n",
+    "    driver = webdriver.Chrome()\n",
+    "    driver.get(f\"https://www.basketball-reference.com/leagues/NBA_{year}_per_game.html\")\n",
+    "\n",
+    "    driver.close()"
+   ]
   },
   {
    "cell_type": "code",
