scraped 2000 - 2023 Awards data

--- a/NBA_predictions.ipynb
+++ b/NBA_predictions.ipynb
@@ -10,51 +10,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver \n",
+    "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import time\n",
-    "import requests"
+    "import requests\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Requests and BeautifulSoup to scrape NBA data for players"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Chrome()\n",
-    "driver.get(f\"https://www.amazon.com/s?k={year}&crid=ZUR7H9TK7QFM&sprefix={year}%2Caps%2C83&ref=nb_sb_noss_1\")\n",
-    "\n",
-    "driver.close()"
+    "years = list(range(2000, 2024))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "years = list(range(2021,2023))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "for year in years:\n",
-    "    driver = webdriver.Chrome()\n",
-    "    driver.get(f\"https://www.basketball-reference.com/leagues/NBA_{year}_per_game.html\")\n",
+    "    base_url = f\"https://www.basketball-reference.com/awards/awards_{year}.html\"\n",
+    "    data = requests.get(base_url)\n",
     "\n",
-    "    driver.close()"
+    "    with open(f'MVP_Data/{year}.html', 'w+', encoding=\"utf-8\") as f:\n",
+    "        f.write(data.text)"
    ]
   },
   {
