updated number of years data is scraped and team standings

--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -423,7 +423,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_conference_dict = {'Atlanta Hawks':'East',\n",
+    "team_conference_dict = {\n",
+    " 'Atlanta Hawks':'East',\n",
     " 'Boston Celtics':'East',\n",
     " 'Brooklyn Nets':'East',\n",
     " 'Charlotte Hornets':'East',\n",
